# etl-framework-core

./: .gitignore  LICENSE  README.md  pyproject.toml  pytest.ini
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml  release.yml
src/core/: etl.py  loader.py  types.py
src/etl_framework/: etl.py  extractor.py  loader.py  resource.py  transformer.py
src/etl_framework_core/: etl.py  extractor.py  resource.py  transformer.py
tests/: conftest.py
tests/unit/: test_etl.py  test_extractor.py  test_loader.py  test_resource.py  test_transform_context.py  test_transformer.py
