[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "etl-framework-core"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pyspark>=3.5.0",
]

[tool.setuptools]
packages = ["etl_framework"]
package-dir = {"" = "src"}